tests/suite/snapshots/suite__check__tests__check__bad-underscore-tuple.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-underscore-tuple.xi:4:3]
   │
 4 │   _ = bar()
   ·   ────┬────  
   ·       ╰────── Initialization mismatch
───╯

